organização de pastas

--- a/login.html
+++ b/login.html
@@ -1,14 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
     <head> <!--INFORMAÇÕES HEAD-->
         <title>Atividade Prática</title> 
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="stylelogin.css">
+        <link rel="stylesheet" href="assets/css/stylelogin.css">
     </head>
 
     <body>
     <!--LOGIN / RECUPERAR SENHA / BOTÃO CADASTRO-->
     <nav class="nav-imagem"> <!--NAV-->
-        <img src="imagens/logo.png" alt="logo" height="110%">
+        <img src="assets/img/logo.png" alt="logo" height="110%">
         <a class="estbotao" id="voltainicio" href="./index.html">Home</a>
         <a class="estbotao" href="./index.html">Produtos</a>
         <a class="estbotao" href="./login.html  ">Login</a><br>
@@ -36,7 +37,7 @@
     
         <footer>
             <div class="footer"> <!--FOOTER-->
-                <img src="imagens/logo.png" alt="logo" height="70%">
+                <img src="assets/img/logo.png" alt="logo" height="70%">
                 <br><br>
                 <a class="estbotao" href="mailto:j=hercilio.neto@unifebe.edu.br">E-mail</a>
                 <a class="estbotao" href="https://wa.me/55479991552259"target="_blank">WhatsAPP</a>
