--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
     <head> <!--HEAD-->
         <title>Atividade Prática</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <meta charset="UTF-8">
     </head>
     
     <body>
         <nav class="nav-imagem"> <!--NAV-->
-            <img src="imagens/logo.png" alt="logo" height="110%">
+            <img src="assets/img/logo.png" alt="logo" height="110%">
             <a class="estbotao" id="voltainicio" href="">Home</a>
             <a class="estbotao" href="./index.html">Produtos</a>
             <a class="estbotao" href="./login.html  ">Login</a><br>
@@ -18,7 +18,7 @@
 
         <div class="todosprodutos">
             <div class="produtos"> <!--PRODUTO 1 - SINTRA FAST-->      
-                <img src="imagens/sintra.png" alt="SINTRA FAST" height="25%" width="40%">
+                <img src="assets/img/sintra.png" alt="SINTRA FAST" height="25%" width="40%">
                 <h3 style="color:white">SINTRA FAST <br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$21,00 á vista</h3>
                 <h4 style="color:white">3x de R$7,30</h4>
@@ -26,7 +26,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 2 - V-FLOC-->             
-                <img src="imagens/shampo.png" alt="V-FLOC" height="25%" width="40%">
+                <img src="assets/img/shampo.png" alt="V-FLOC" height="25%" width="40%">
                 <h3 style="color:white">V-FLOC <br>Vonixx - (1,5L)</h3>
                 <h3 style="color:green">R$42,90 á vista</h3>
                 <h4 style="color:white">3x de R$14,30</h4>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 3 - BLEND-->      
-                <img src="imagens/blend.png" alt="BLEND" height="25%" width="40%">
+                <img src="assets/img/blend.png" alt="BLEND" height="25%" width="40%">
                 <h3 style="color:white">BLEND BLACK EDITION<br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$52,00 á vista</h3>
                 <h4 style="color:white">3x de R$17,33</h4>
@@ -44,7 +44,7 @@
 
         <div class="todosprodutos">
             <div class="produtos"> <!--PRODUTO 4 - HIDRACOURO-->      
-                <img src="imagens/hidracouro.png" alt="HIDRACOURO" height="25%" width="40%">
+                <img src="assets/img/hidracouro.png" alt="HIDRACOURO" height="25%" width="40%">
                 <h3 style="color:white">HIDRACOURO <br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$32,00 á vista</h3>
                 <h4 style="color:white">3x de R$10,60</h4>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 5 - INTENSE-->             
-                <img src="imagens/intense.png" alt="INTENSE" height="25%" width="40%">
+                <img src="assets/img/intense.png" alt="INTENSE" height="25%" width="40%">
                 <h3 style="color:white">INTENSE <br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$42,90 á vista</h3>
                 <h4 style="color:white">3x de R$14,30</h4>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 6 - MAKKER-->      
-                <img src="imagens/makker.png" alt="MAKKER" height="25%" width="40%">
+                <img src="assets/img/makker.png" alt="MAKKER" height="25%" width="40%">
                 <h3 style="color:white">MAKKER<br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$45,00 á vista</h3>
                 <h4 style="color:white">3x de R$15,00</h4>
@@ -70,7 +70,7 @@
 
         <div class="todosprodutos">
             <div class="produtos"> <!--PRODUTO 7 - RESTAURAX-->      
-                <img src="imagens/restaurax.png" alt="RESTAURAX" height="25%" width="40%">
+                <img src="assets/img/restaurax.png" alt="RESTAURAX" height="25%" width="40%">
                 <h3 style="color:white">RESTAURAX <br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$44,00 á vista</h3>
                 <h4 style="color:white">3x de R$14,66</h4>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 8 - SHINNY-->             
-                <img src="imagens/shinny.png" alt="SHINNY" height="25%" width="40%">
+                <img src="assets/img/shinny.png" alt="SHINNY" height="25%" width="40%">
                 <h3 style="color:white">SHINNY <br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$60,00</h3>
                 <h4 style="color:white">3x de R$20,00</h4>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 9 - TOKFINAL-->      
-                <img src="imagens/tokfinal.png" alt="TOKFINAL" height="25%" width="40%">
+                <img src="assets/img/tokfinal.png" alt="TOKFINAL" height="25%" width="40%">
                 <h3 style="color:white">TOK FINAL<br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$52,00</h3>
                 <h4 style="color:white">3x de R$17,33</h4>
@@ -96,7 +96,7 @@
 
         <div class="todosprodutos">
             <div class="produtos"> <!--PRODUTO 10 - V80-->      
-                <img src="imagens/v80.png" alt="V80" height="25%" width="40%">
+                <img src="assets/img/v80.png" alt="V80" height="25%" width="40%">
                 <h3 style="color:white">V80<br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$21,00 á vista</h3>
                 <h4 style="color:white">3x de R$7,30</h4>
@@ -104,7 +104,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 11 - VLUB-->             
-                <img src="imagens/vlub.png" alt="VLUB" height="25%" width="40%">
+                <img src="assets/img/vlub.png" alt="VLUB" height="25%" width="40%">
                 <h3 style="color:white">V-LUB <br>Vonixx - (1,5L)</h3>
                 <h3 style="color:green">R$60,00</h3>
                 <h4 style="color:white">3x de R$20,00</h4>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="produtos"> <!--PRODUTO 12 - STRIKE-->      
-                <img src="imagens/strike.png" alt="STRIKE" height="25%" width="40%">
+                <img src="assets/img/strike.png" alt="STRIKE" height="25%" width="40%">
                 <h3 style="color:white">STRIKE<br>Vonixx - (500ML)</h3>
                 <h3 style="color:green">R$52,00</h3>
                 <h4 style="color:white">3x de R$17,33</h4>
@@ -122,7 +122,7 @@
 
         <footer>
             <div class="footer"> <!--FOOTER-->
-                <img src="imagens/logo.png" alt="logo" height="70%">
+                <img src="assets/img/logo.png" alt="logo" height="70%">
                 <br><br>
                 <a class="estbotao" href="mailto:j=hercilio.neto@unifebe.edu.br">E-mail</a>
                 <a class="estbotao" href="https://wa.me/55479991552259"target="_blank">SAC</a>
